# personal_dotfiles

./: .gitmodules  .zshrc  README.md  brewfile  first-install.sh  gitconfig  install  install.comf.yaml  install.conf.yaml  pre-install.sh  readme.md  zprofile  zshrc
oh-my-zsh/completions/: _dbt
poetry_environments/dbt-docs/: pyproject.toml
poetry_environments/dbt-latest/: pyproject.toml
poetry_environments/dbt-package-development/: pyproject.toml
poetry_environments/dbt-prerelease/: pyproject.toml
poetry_environments/dbt-stable/: pyproject.toml
poetry_environments/dbt-testing-metrics/: pyproject.toml
vscode/: extensions.txt  readme.md  settings.json
