[tool.poetry]
name = "dbt-package-development"
version = "0.1.0"
description = "This environment will be used for package development"
authors = ["Callum McCann <cmccann51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.1.0"
dbt-redshift = "^1.1.0"
dbt-bigquery = "^1.1.0"
dbt-spark = "^1.1.0"
pytest = "^7.1.2"
pytest-dotenv = "^0.5.2"
dbt-tests-adapter = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
