[tool.poetry]
name = "dbt-prerelease"
version = "0.1.0"
description = "This environment will always contain the most up to date version of dbt, including pre-releases"
authors = ["Callum McCann <cmccann51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = {version="^1.1.0", allow-prereleases = true}
dbt-redshift = {version="^1.1.0", allow-prereleases = true}
dbt-postgres = {version="^1.1.0", allow-prereleases = true}
dbt-bigquery = {version="^1.1.0", allow-prereleases = true}
dbt-spark = {version="^1.1.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
