[tool.poetry]
name = "dbt-stable"
version = "0.1.0"
description = "The latest stable dbt version"
authors = ["Callum McCann <cmccann51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.1.0"
dbt-redshift = "^1.1.0"
dbt-postgres = "^1.1.0"
dbt-bigquery = "^1.1.0"
dbt-spark = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
